Exercício 2/Atividade 2/labwordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: labwordpress
  name: wordpress-service
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: labwordpress
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-persistent-storage-lab
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage-lab
        persistentVolumeClaim:
          claimName: wordpress-pvclaim
