Exercício 2/Atividade 2/labwordpress-mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: labwordpress
  name: wordpress-mysql-service
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - port: 3308
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: labwordpress
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3308
        volumeMounts:
        - name: mysql-persistent-storage-lab
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage-lab
        persistentVolumeClaim:
          claimName: mysql-pvclaim
