Exercício 2/Atividade 2/labwordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: labwordpress
  name: nginx-ingress
spec:
  rules:
    - host: labwordpress.teste
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
  ingressClassName: nginx
